# p2p-mpc

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cli.yml  config.example.yml
.github/workflows/: rust.yml
src/: cli.rs  crypto.rs  main.rs  metrics.rs  network.rs  rpc.rs  tracing_config.rs
src/mpc/: aux_party.rs  keygen_party.rs  mod.rs  orchestrator.rs  signing_party.rs
src/test/: mock.rs  mod.rs  tests.rs
