[package]
name = "p2p-mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lazy_static = "1.4"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version="0.30.0",  features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.30.0" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
