[package]
name = "p2p-mpc"
version = "0.1.0"
edition = "2024"

[features]
default = []
development = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
lazy_static = "1.4"
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version="0.30.0",  features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.30.0" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
libp2p = {version="0.49.0", features = ["full", "tcp-tokio", "dns-tokio"]}
anyhow = "1"
jsonrpsee = { version = "0.24", features = ["server", "macros", "client"] }
ratatui = "0.28"
crossterm = "0.28"
# CGGMP24 libraries (using published versions from crates.io)
cggmp24 = { version = "0.7.0-alpha.3", features = ["std", "curve-secp256k1"] }
cggmp24-keygen = "0.7.0-alpha.3"
key-share = "0.6.1"
round-based = "0.4.1"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
bincode = "1.3"
